css/style.css
/*
Project Name: Boredom Cat
Author: Anna Zambelli
Developer @GA in Chi
*/


/******************************************
/* SETUP
/*******************************************/

/* Box Model Hack */
* {
  -moz-box-sizing: border-box; /* Firexfox */
  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
  box-sizing: border-box; /* IE */
}

/* Clear fix hack */
.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.clear {
  clear: both;
}

.alignright {
  float: right;
  padding: 0 0 10px 10px; /* note the padding around a right floated image */
}

.alignleft {
  float: left;
  padding: 0 10px 10px 0; /* note the padding around a left floated image */
}

/******************************************
/* BASE STYLES
/*******************************************/

body {
  color: #043049;
  font-size: 26px;
  line-height: 1.4;
  color: #606161;
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 300;
}
a {
  text-decoration: none;
}


/******************************************
/* LAYOUT
/*******************************************/

/* Header */
.container {
  width: 100%;
  margin: 0 auto;
  text-align: center;
  padding-left: 5%;
  padding-right: 5%;
  background: url(../images/sky.jpg) no-repeat center top darkblue;

}

.container img {
  width: 100%;
  margin-bottom: -3%;
}

#name {
  font-size: 50px;
  text-transform: uppercase;
  color: white;
  margin-top: -2%;
  font-family: 'Indie Flower';
}

hr {
  margin: -1%;
  border: 1px solid #b4ff00;
}

/*Nav*/

.nav {
  height: 200px;
  width: 100%;
  text-align: center;
  margin-top: 12px;
  float: left;
  margin-bottom: 20px;
}

nav img {
  width: 15%;
  margin: 3%;
}


/*Pizza Section*/

.holder {
  width: 100%;
}

.pizza-holder {
  text-align: center;
  margin: 0 auto;
  display: block;
  width: 100%;
}

.pizza img {
  height: 300px;

}

.pizza {
  float: left;
  margin: 20px 10px 20px 10px;
  width: 44%;
  text-align: center;
}

.pizza-master {
  text-align: center;
  padding-left: 10%;
  padding-right: 10%;
}

/*Writing Content*/

.work-holder {
  text-align: center;
  margin: 0 auto;
}

.content {
  height: 980px;
  width: 41%;
  float: left;
  margin-left: 5%;
  margin-top: 5%;
  border: #eceaea 2px solid;
  padding: 12px;

}

.content img {
    width: 100%;
}

.content h2 {
  font-size: 24px;
  color: black;
}

.content p {
  font-size: 14px;
  margin-top: 8px;
}

.story {
  font-size: 11px;
  font-family: serif;
  text-align: left;
}


.read-more {
  font-size: 24px;
}


/*Bread Section*/

.bread-holder {
  padding: 15px;
  margin-top: 20px;
}


.ingredients {
  margin-top: 20px;
  padding-left: 10%;
  margin-bottom: 20px;
}

.ingredients h2 {
  font-weight: 600;
}

.instructions h2 {
  font-size: 1.2em;
  margin: 5% 0% 0% 6%;
  font-weight: 600;
}

.instructions li {
    list-style-type: decimal;
    padding: 1%;
    margin-left: 13%;
    font-size: 19px;
}

.bread-holder img {
  width: 40%;
  float: right;
  margin: 4%;
  border: 2px solid #3206a1;
  border-radius: 4%;
}


/*Peru Section*/

.peru-holder {
  padding: 15px;
  margin-top: 20px;
}


.peru-holder h2 {
  font-weight: 600;
  margin-top: 20px;
}

.peru-holder p {
  margin-top: 15px;
  margin-left: 18px;
}

.peru-holder a {
  color: #4286f4;
  font-weight: 600;
}

.peru-holder .right {
  float: right;
  width: 40%;
  margin: 5%;
}

.peru-holder .left {
  float: left;
  width: 40%;
  margin: 5%;
}

/*Footer*/
footer {
  height: 100px;
}

.hide {
  display: none;
}

/*COMMON STYLES*/

.subhead {
  color: #3206a1;
  font-size: 40px;
  font-family: 'Bitter', sans-serif;
}





/*MOBILE*/


#hamburger {
  border: 2px solid #b4ff00;
  display: none;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 3px;
  padding-right: 3px;
}

span.ham-line {
  width: 40px;
  margin: 2px;
  height: 2px;
  position: relative;
  display: block;
  background-color: #b4ff00;
  border-radius: 3px;
  pointer-events: none;
}

#mobile-only {
  height: 50px;
  text-align: center;
  position: relative;
}

.mobilenav {
  margin: 0;
  position: absolute;
  bottom: 0;
  width: 100%;
  max-width: 420px;
  margin-top: -50%;
  transform: translate(-110%, 100%);
  transition: 1s all cubic-bezier(1, 0.25, 0.07, 0.96);
}

.mobilenav img {
  width: 15%;
  margin: 3%;
}

.mobilenav ul {
  padding-left: 17px;
}

.mobile-nav-items {
  list-style: none;
  font-size: 1rem;
}

.mobilenav.active {
  display: none;
}

@media screen and (max-width: 480px) {
  #hamburger {
    display: inline-block;
  }

  .mobilenav.active {
    display: block;
    transform: translate(0%, 100%);
  }

  nav, hr {
    display: none;
  }

  .container {
    background-color: white;
    background-image: none;
  }

  #name {
    color: #3206a1;
    font-size: 40px;
    margin-top: 3%;
  }

  .subhead {
    font-size: 25px;
  }

  .holder {
    margin-top: 20%;
  }

  /*mobile pizza section*/

.pizza img {
  height: 200px;

}

.pizza {
  float: none;
  margin: 10px;
  width: 100%;
  padding-right: 7%;
}

/*mobile writing section*/

.content {
  height: 830px;
  width: 88%;
  float: none;
  margin-left: 5%;
  margin-top: 5%;
  border: #eceaea 2px solid;
  padding: 12px;

}

.content h2 {
  font-size: 20px;
  color: black;
}

.content p {
  font-size: 12px;
  margin-top: 8px;
}

.story {
  font-size: 10px;
  font-family: serif;
  text-align: left;
}


.read-more {
  font-size: 20px;
}

/*Bread Mobile Section*/

.instructions li {
    list-style-type: decimal;
    padding: 1%;
    margin-left: 13%;
    font-size: 13px;
}

.bread-holder h2 {
  font-size: 16px;
}

.ingredients li {
  font-size: 14px;
}

/*Peru Mobile Section*/

.peru-holder h2 {
  font-size: 18px;
}

.peru-holder p {
  font-size: 12px;
}

.peru-holder .right {
  float: none;
  width: 90%;
  text-align: center;
}

.peru-holder .left {
  float: none;
  width: 90%;
  text-align: center;
}

}

